-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
None
-
Android emulator on Ubuntu through Chrome Remote Desktop
-
79447068579ea93d616d840bb8cbbf8adb1ed6ec
When running the Qt version of the Android emulator in a Chrome Remote Desktop session, it crashes with a SIGFPE, Arithmetic exception.
It's caused by a division by zero in QXcbScreen::updateRefreshRate() in qtbase/src/plugins/platforms/xcb/qxcbscreen.cpp
- is duplicated by
-
QTBUG-51039 xcb plugin SIGFPEs when modeInfo's htotal and/or vtotal are 0
-
- Closed
-
- relates to
-
QTBUG-47738 Crash due to divide-by-zero when xrandr reports 0 mm x 0 mm physical size
-
- Closed
-
| For Gerrit Dashboard: QTBUG-49322 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 140411,5 | Fix potential division by zero. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |